--- a/public/index.html
+++ b/public/index.html
@@ -29,6 +29,14 @@
             <label for="password">Password:</label>
             <input id="password" name="password">
           </div>
+          <div>
+            <label for="birthday">Birthday:</label>
+            <input type="date" id="birthday" name="birthday">
+          </div>
+          <div>
+            <label for="bio">bio:</label>
+            <input id="bio" name="bio">
+          </div>
           <input type="submit" value="Create User">
         </form>
 
