--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,7 @@
   <script src="/scripts/follow.js"></script>
   <script src="/scripts/favorite.js"></script>
   <script src="/scripts/friend.js"></script>
+  <script src="/scripts/feed.js"></script>
 </head>
 
 <body>
@@ -217,6 +218,15 @@
             <input id="username" name="username">
           </div>
           <input type="submit" value="View Friends By username">
+        </form>
+
+        <form id="view-feed">
+          <h3>View Feed with a given name</h3>
+          <div>
+            <label for="name">feed name:</label>
+            <input id="name" name="name">
+          </div>
+          <input type="submit" value="view feed with specific name">
         </form>
 
       </div>
