everything working except update and delete content group, and sort by likes

--- a/public/index.html
+++ b/public/index.html
@@ -324,6 +324,33 @@
           <input type="submit" value="update content group">
         </form>
 
+        <form id="follow-group">
+          <h3>follow a content group</h3>
+          <div>
+            <label for="name">group name:</label>
+            <input id="name" name="name">
+          </div>
+          <input type="submit" value="follow group">
+        </form>
+
+        <form id="unfollow-group">
+          <h3>unfollow a content group</h3>
+          <div>
+            <label for="name">group name:</label>
+            <input id="name" name="name">
+          </div>
+          <input type="submit" value="unfollow group">
+        </form>
+
+        <form id="view-groups-following">
+          <h3>get the groups a user is following</h3>
+          <div>
+            <label for="username">username:</label>
+            <input id="username" name="username">
+          </div>
+          <input type="submit" value="get group">
+        </form>
+
       </div>
     </section>
     <section>
