fixed content group updating

--- a/public/index.html
+++ b/public/index.html
@@ -306,8 +306,8 @@
             <input id="name" name="name">
           </div>
           <div>
-            <label for="addModarator">addModarator:</label>
-            <input id="addModarator" name="addModarator">
+            <label for="addModerator">addModerator:</label>
+            <input id="addModerator" name="addModerator">
           </div>
           <div>
             <label for="removeModerator">removeModerator:</label>
